added icon and new colorization option

--- a/Fractal Xplorer/Base.lproj/Main.storyboard
+++ b/Fractal Xplorer/Base.lproj/Main.storyboard
@@ -729,7 +729,7 @@
                                 </connections>
                             </customView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lnx-te-E2N">
-                                <rect key="frame" x="345" y="294" width="350" height="100"/>
+                                <rect key="frame" x="353" y="286" width="334" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Zf0-BV-ggP"/>
                                 </constraints>
@@ -740,7 +740,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Q6R-c4-hww">
-                                <rect key="frame" x="-2" y="294" width="351" height="100"/>
+                                <rect key="frame" x="6" y="286" width="335" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="HJf-Uk-WRC"/>
                                 </constraints>
@@ -771,6 +771,7 @@
                                             <menuItem title="Dark Bloo" id="sSK-Ph-lZA"/>
                                             <menuItem title="Basic" id="12t-1P-LA6"/>
                                             <menuItem title="Rainbow Vomit" id="be6-4L-5zc"/>
+                                            <menuItem title="uKnown" id="RSg-zM-V9U"/>
                                         </items>
                                     </menu>
                                 </popUpButtonCell>
@@ -797,19 +798,19 @@
                             </popUpButton>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="lnx-te-E2N" firstAttribute="trailing" secondItem="53g-LT-psK" secondAttribute="trailing" id="07t-Xk-gQT"/>
+                            <constraint firstItem="lnx-te-E2N" firstAttribute="trailing" secondItem="53g-LT-psK" secondAttribute="trailing" constant="-8" id="07t-Xk-gQT"/>
                             <constraint firstAttribute="trailing" secondItem="53g-LT-psK" secondAttribute="trailing" id="47C-5R-RFC"/>
                             <constraint firstItem="Z01-qI-Jng" firstAttribute="width" secondItem="53g-LT-psK" secondAttribute="width" id="4Up-ti-skY"/>
-                            <constraint firstItem="Q6R-c4-hww" firstAttribute="leading" secondItem="Z01-qI-Jng" secondAttribute="leading" id="9di-M6-knv"/>
-                            <constraint firstItem="lnx-te-E2N" firstAttribute="top" secondItem="53g-LT-psK" secondAttribute="top" id="MKj-aK-iEL"/>
+                            <constraint firstItem="Q6R-c4-hww" firstAttribute="leading" secondItem="Z01-qI-Jng" secondAttribute="leading" constant="8" id="9di-M6-knv"/>
+                            <constraint firstItem="lnx-te-E2N" firstAttribute="top" secondItem="53g-LT-psK" secondAttribute="top" constant="8" id="MKj-aK-iEL"/>
                             <constraint firstItem="53g-LT-psK" firstAttribute="leading" secondItem="Z01-qI-Jng" secondAttribute="trailing" id="NnE-zj-jV3"/>
                             <constraint firstAttribute="bottom" secondItem="53g-LT-psK" secondAttribute="bottom" id="P00-m7-MNZ"/>
-                            <constraint firstItem="Q6R-c4-hww" firstAttribute="top" secondItem="Z01-qI-Jng" secondAttribute="top" id="XFb-kv-tNn"/>
-                            <constraint firstItem="Q6R-c4-hww" firstAttribute="trailing" secondItem="Z01-qI-Jng" secondAttribute="trailing" id="eIa-NZ-2iD"/>
+                            <constraint firstItem="Q6R-c4-hww" firstAttribute="top" secondItem="Z01-qI-Jng" secondAttribute="top" constant="8" id="XFb-kv-tNn"/>
+                            <constraint firstItem="Q6R-c4-hww" firstAttribute="trailing" secondItem="Z01-qI-Jng" secondAttribute="trailing" constant="-8" id="eIa-NZ-2iD"/>
                             <constraint firstAttribute="bottom" secondItem="Z01-qI-Jng" secondAttribute="bottom" id="jmf-db-dCm"/>
                             <constraint firstItem="Z01-qI-Jng" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="pQ2-ik-fhG"/>
                             <constraint firstItem="Z01-qI-Jng" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="uRw-28-UvS"/>
-                            <constraint firstItem="lnx-te-E2N" firstAttribute="leading" secondItem="53g-LT-psK" secondAttribute="leading" id="w1k-Qb-xuU"/>
+                            <constraint firstItem="lnx-te-E2N" firstAttribute="leading" secondItem="53g-LT-psK" secondAttribute="leading" constant="8" id="w1k-Qb-xuU"/>
                             <constraint firstItem="53g-LT-psK" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" id="x1J-xc-WlN"/>
                         </constraints>
                     </view>
